# QOnlineTranslator

./: .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  qonlinetranslator.pri  vcpkg.json
.github/workflows/: main.yml
docs/: QDefinition.md  QDictionary.md  QExample.md  QOnlineTranslator.md  QOnlineTts.md  QOption.md  QTranslationOptions.md
src/: QOnlineTranslator  QOnlineTts  qdefinition.cpp  qdefinition.h  qdictionary.cpp  qdictionary.h  qexample.cpp  qexample.h  qonlinetranslator.cpp  qonlinetranslator.h  qonlinetts.cpp  qonlinetts.h  qoption.cpp  qoption.h  qtranslationoptions.cpp  qtranslationoptions.h
translations/: qonlinetranslator_ru.ts
